# Roingine

./: .gitignore  CMakeLists.txt  README.md
bomberman/: CMakeLists.txt
bomberman/src/: audio.h  event_queue.h  finite_state_machine.h  game.cpp  game.h  level.cpp  level.h  living_entity_command.cpp  living_entity_command.h  main.cpp  move_command.cpp  move_command.h  place_bomb_command.cpp  place_bomb_command.h  player_info.cpp  player_info.h  unassigned_controller.cpp  unassigned_controller.h  upgrade_type.cpp  upgrade_type.h
bomberman/src/components/: bomb.cpp  bomb.h  bomberman.cpp  bomberman.h  enemy.cpp  enemy.h  enemy_ai.cpp  enemy_ai.h  level_flyweight.cpp  level_flyweight.h  living_entity.cpp  living_entity.h  moving_entity.cpp  moving_entity.h  player.cpp  player.h  temporary_object.h  upgrade.cpp  upgrade.h
bubble_bobble/: CMakeLists.txt
bubble_bobble/scenes/: main.json
bubble_bobble/scripts/: require_test.js  runtime_script.js  test.js
bubble_bobble/src/: main.cpp
engine/: CMakeLists.txt
engine/include/: game_time.h  gameobject_types.h  input.h  roingus.h
engine/include/components/: component.h
engine/include/math/: precision.h
engine/include/roingine/: audio_service.h  component_init_types.h  controller.h  duk_wrappers.h  engine_event_queue.h  event_queue.h  game_info.h  game_time.h  gameobject.h  gameobject_types.h  gl_texture.h  image_scaling.h  input.h  keyboard_input.h  music.h  pair_hash.h  reusable_texture.h  roingine.h  scene.h  scene_loader.h  scene_manager.h  script.h  service_locator.h  singleton.h  sound_clip.h  unique_duk_context.h
engine/include/roingine/commands/: command.h  gameobject_command.h  registered_controller_command.h  registered_keyboard_command.h
engine/include/roingine/components/: animation_renderer.h  camera.h  component.h  rect.h  rect_collider.h  rect_renderer.h  script.h  scripts.h  texture_renderer.h  transform.h
engine/include/roingine/math/: vec2.h
engine/internal_headers/: collect_component_args.h  component_args.h  controller_impl.h  duk_gameobject.h  engine_event_queue.h  game_time_impl.h  game_time_internal.h  gl_texture.h  input_impl.h  input_internal.h  keyboard_input_impl.h  music_impl.h  scene_impl.h  scene_loader_impl.h  scene_manager_impl.h  sdl_context.h  sdl_smart_pointers.h  sound_impl.h  unique_sdl_game_controller.h  unique_sdl_surface.h
engine/src/: collect_component_args.cpp  component_args.cpp  component_init_types.cpp  controller.cpp  duk_gameobject.cpp  duk_wrappers.cpp  game_info.cpp  game_time.cpp  gameobject.cpp  gl_texture.cpp  image_scaling.cpp  input.cpp  keyboard_input.cpp  music.cpp  reusable_texture.cpp  roingine.cpp  roingus_engine.cpp  scene.cpp  scene_loader.cpp  scene_manager.cpp  script.cpp  sdl_context.cpp  sdl_smart_pointers.cpp  sound_impl.cpp  unique_duk_context.cpp  unique_sdl_game_controller.cpp  unique_sdl_surface.cpp
engine/src/commands/: gameobject_command.cpp  registered_controller_command.cpp  registered_keyboard_command.cpp
engine/src/components/: animation_renderer.cpp  camera.cpp  component.cpp  rect.cpp  rect_collider.cpp  rect_renderer.cpp  script.cpp  scripts.cpp  texture_renderer.cpp  transform.cpp
test_project/: CMakeLists.txt
test_project/scenes/: main.json
test_project/scripts/: runtime_script.js  test.js
test_project/src/: audio.h  event_queue.h  finite_state_machine.h  game.cpp  game.h  level.cpp  level.h  level_loader.cpp  level_loader.h  main.cpp  move_command.cpp  move_command.h  place_bomb_command.cpp  place_bomb_command.h  player_info.cpp  unassigned_controller.cpp
test_project/src/components/: bomb.cpp  bomb.h  enemy.cpp  enemy.h  enemy_ai.cpp  level_flyweight.cpp  level_flyweight.h  moving_entity.cpp  moving_entity.h  player.cpp  player.h  temporary_object.cpp  temporary_object.h
